Fix en template

--- a/sgd-webapp/src/main/webapp/layout/template.xhtml
+++ b/sgd-webapp/src/main/webapp/layout/template.xhtml
@@ -71,15 +71,15 @@
 				<div class="group">
 					<div class="group-title">Gestión FHCE</div>
 					<ul class="group-wrapper">
-						<li><a href="/pages/gestion/areas-tematicas.xhtml"> <span
+						<li><a href="/pages/gestion/areas-tematicas.jsf"> <span
 								class="material-symbols-outlined"> settings </span>
 								<p>Ver áreas temáticas</p>
 						</a></li>
-						<li><a href="/pages/gestion/carreras.xhtml"> <span
+						<li><a href="/pages/gestion/carreras.jsf"> <span
 								class="material-symbols-outlined"> account_balance </span>
 								<p>Ver carreras</p>
 						</a></li>
-						<li><a href="/pages/gestion/unidades.xhtml"> <span
+						<li><a href="/pages/gestion/unidades.jsf"> <span
 								class="material-symbols-outlined"> local_library </span>
 								<p>Ver unidades académicas</p>
 						</a></li>
@@ -96,7 +96,7 @@
 								class="material-symbols-outlined"> hourglass_top </span>
 								<p>Ver programas en proceso de creación</p>
 						</a></li>
-						<li><a href="/pages/programas/ver-programas.xhtml"> <span
+						<li><a href="/pages/programas/ver-programas.jsf"> <span
 								class="material-symbols-outlined"> view_list </span>
 								<p>Ver programas aprobados</p>
 						</a></li>
