Gestion de roles

--- a/sgd-webapp/src/main/webapp/layout/template.xhtml
+++ b/sgd-webapp/src/main/webapp/layout/template.xhtml
@@ -63,10 +63,13 @@
 					<li><a href="/pages/gestion/usuarios.jsf"> <span
 							class="material-symbols-outlined"> group </span> Ver usuarios
 					</a></li>
-					<li><a href="/pages/programa-nuevo.html"> <span
-							class="material-symbols-outlined"> manufacturing </span> Roles y
-							operaciones
+					<li><a href="/pages/gestion/ver-roles.jsf"> <span
+							class="material-symbols-outlined"> manufacturing </span> Ver roles
 					</a></li>
+					<li><h:commandLink action="#{gestionController.nuevoRol}">
+							<span class="material-symbols-outlined"> note_add </span>
+							<p>Rol nuevo</p>
+						</h:commandLink></li>
 				</ul>
 			</div>
 			<div class="group">
