Se realiza build dentro del contenedor docker

--- a/sgd-webapp/src/main/webapp/layout/template.xhtml
+++ b/sgd-webapp/src/main/webapp/layout/template.xhtml
@@ -57,21 +57,21 @@
 				id="collapse-icon" class="fa fa-2x mr-3 fa-angle-double-right"></span>
 				<span id="collapse-text" class="menu-collapsed">Cerrar</span>
 			</a>
-			<div class="group">
-				<div class="group-title">Usuarios</div>
-				<ul class="group-wrapper">
-					<li><a href="/pages/gestion/usuarios.jsf"> <span
-							class="material-symbols-outlined"> group </span> Ver usuarios
-					</a></li>
-					<li><a href="/pages/gestion/ver-roles.jsf"> <span
-							class="material-symbols-outlined"> manufacturing </span> Ver roles
-					</a></li>
-					<li><h:commandLink action="#{gestionController.nuevoRol}">
-							<span class="material-symbols-outlined"> note_add </span>
-							<p>Rol nuevo</p>
-						</h:commandLink></li>
-				</ul>
-			</div>
+<!-- 			<div class="group"> -->
+<!-- 				<div class="group-title">Usuarios</div> -->
+<!-- 				<ul class="group-wrapper"> -->
+<!-- 					<li><a href="/pages/gestion/usuarios.jsf"> <span -->
+<!-- 							class="material-symbols-outlined"> group </span> Ver usuarios -->
+<!-- 					</a></li> -->
+<!-- 					<li><a href="/pages/gestion/ver-roles.jsf"> <span -->
+<!-- 							class="material-symbols-outlined"> manufacturing </span> Ver roles -->
+<!-- 					</a></li> -->
+<!-- 					<li><h:commandLink action="#{gestionController.nuevoRol}"> -->
+<!-- 							<span class="material-symbols-outlined"> note_add </span> -->
+<!-- 							<p>Rol nuevo</p> -->
+<!-- 						</h:commandLink></li> -->
+<!-- 				</ul> -->
+<!-- 			</div> -->
 			<div class="group">
 				<div class="group-title">Gestión FHCE</div>
 				<ul class="group-wrapper">
@@ -100,10 +100,10 @@
 							class="material-symbols-outlined"> hourglass_top </span>
 							<p>Ver programas en proceso de creación</p>
 					</a></li>
-					<li><a href="/pages/programas/ver-programas.jsf"> <span
-							class="material-symbols-outlined"> view_list </span>
-							<p>Ver programas aprobados</p>
-					</a></li>
+<!-- 					<li><a href="/pages/programas/ver-programas.jsf"> <span -->
+<!-- 							class="material-symbols-outlined"> view_list </span> -->
+<!-- 							<p>Ver programas aprobados</p> -->
+<!-- 					</a></li> -->
 				</ul>
 			</div>
 		</h:form>
