--- a/sgd-webapp/src/main/resources/templates/login.html
+++ b/sgd-webapp/src/main/resources/templates/login.html
@@ -41,12 +41,12 @@
 						<div class="item">
 							<label for="username">Usuario</label> <input
 								th:field="*{username}" type="text" id="username" name="username"
-								placeholder="Enter your Username" required>
+								placeholder="Ingresa usuario nombre.apellido" required>
 						</div>
 						<div class="item">
 							<label for="password">Contraseña</label> <input
 								th:field="*{password}" type="password" id="password"
-								name="password" placeholder="Enter your Password" required>
+								name="password" placeholder="Ingresa tu contraseña" required>
 						</div>
 						<div class="item">
 							<button class="button button_rojo" type="submit">Ingresar</button>
