Se cambia ldap de testeo en fhce

--- a/sgd-webapp/src/main/resources/templates/login.html
+++ b/sgd-webapp/src/main/resources/templates/login.html
@@ -43,7 +43,7 @@
 						<div class="item">
 							<label for="username" class="item-label">Usuario</label> <input
 								th:field="*{username}" type="text" id="username" name="username"
-								placeholder="nombre.apellido@fhce.com.uy" required>
+								placeholder="nombre.apellido@fhce.edu.uy" required>
 						</div>
 						<div class="item">
 							<label for="password" class="item-label">Contraseña</label> <input
