--- a/sgd-webapp/src/main/resources/templates/login.html
+++ b/sgd-webapp/src/main/resources/templates/login.html
@@ -4,15 +4,17 @@
     xmlns:sec="http://www.thymeleaf.org">
 
 <head>
-<meta charset="UTF-8">
-<title>SGD - FHCE | Login</title>
-<link rel="stylesheet"
-	href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-<link
-	href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;800"
-	rel="stylesheet" />
-
-<link rel="stylesheet" th:href="@{/css/styles.min.css}">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>SGD - FHCE | Login</title>
+	<link rel="stylesheet"
+		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+	<link
+		href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;800"
+		rel="stylesheet" />
+	
+	<link rel="stylesheet" th:href="@{/css/styles.min.css}">
 </head>
 
 <body>
