--- a/sgd-webapp/src/main/webapp/layout/template.xhtml
+++ b/sgd-webapp/src/main/webapp/layout/template.xhtml
@@ -118,6 +118,7 @@
 			<ui:insert name="content">Main Content</ui:insert>
 			<script src="/js/jquery-3.6.1.min.js"></script>
 			<script src="/js/jquery-ui.min.js"></script>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.0.1/jquery-migrate.min.js" />
 			<script
 				src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" />
 			<script src="/js/main.js"></script>
